--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,11 +1,8 @@
 <mat-toolbar>
   <span>{{title | uppercase}}</span>
   <span class="spacer"></span>
-  <button mat-icon-button (click)="openLogin()">
-    <mat-icon>account_circle</mat-icon>
-  </button>
-  <button mat-icon-button (click)="openSettings()">
-    <mat-icon>settings</mat-icon>
+  <button mat-icon-button (click) = "logout()">
+    <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<router-outlet *ngIf = "account"></router-outlet>
