--- a/ui/src/app/login/login.component.html
+++ b/ui/src/app/login/login.component.html
@@ -17,7 +17,7 @@
           appearance="outline"
         >
           <mat-label class="placeholder">Login</mat-label>
-          <input style="width: 260px; height: 20px" matInput type="text" />
+          <input style="width: 260px" matInput type="text" />
         </mat-form-field>
       </div>
     </div>
