Registration logic implemented

--- a/ui/src/app/infodialog.html
+++ b/ui/src/app/infodialog.html
@@ -1,6 +1,6 @@
 <h3 mat-dialog-title>Error</h3>	
 <div mat-dialog-content>	
-  <p>Bad account credentials.</p>
+  <p>{{data}}</p>
 </div>	
 <div mat-dialog-actions>	
   <button tabindex="1" (click)="close()">OK</button>
