--- a/ui/src/app/registration/registration.component.css
+++ b/ui/src/app/registration/registration.component.css
@@ -28,8 +28,11 @@ h2 {
 .main {
   max-width: 100%;
 }
+.mat-form-field {
+  font-size: 13px;
+}
 .buttonreg {
-  margin-right: 70px;
+  margin-right: 137px;
   font-family: Roboto;
   font-style: normal;
   font-weight: 900;
@@ -46,9 +49,11 @@ h2 {
   box-sizing: border-box;
   border-radius: 6px;
   height: 30px;
-  width: 130px;
+  width: 63px;
 }
-
+.buttonreg:hover {
+  color: #000000; /* Цвет ссылки при наведении на нее курсора мыши */
+  border: 2px solid #000000;}
 .buttonnext {
   font-family: Roboto;
   font-style: normal;
@@ -68,6 +73,9 @@ h2 {
   border-radius: 6px;
   height: 30px;
   width: 60px;
+}
+.buttonnext:hover {
+  background-color: #000000; /* Цвет ссылки при наведении на нее курсора мыши */
 }
 
 .buttonback {
