--- a/ui/src/app/registration/registration.component.html
+++ b/ui/src/app/registration/registration.component.html
@@ -1,4 +1,4 @@
-<ng-container [ngTemplateOutlet]="getTemplate">
+<ng-container *ngIf="change; else PasswordTemplate">
   <div class="container main">
     <div class="row d-flex justify-content-center">
       <div class="col-1">
@@ -12,28 +12,21 @@
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <mat-form-field
-          style="width: 260px; margin-bottom: 20px"
-          appearance="outline"
-        >
+        <mat-form-field style="width: 260px; margin-bottom: 20px" appearance="outline">
           <mat-label class="placeholder">Login</mat-label>
-          <input style="width: 260px; height: 20px" matInput type="text" />
+          <input style="width: 260px; height: 20px" matInput type="text" [formControl]="loginControl" (blur)="selectLogin()"/>
+          <mat-hint *ngIf="loginControl.invalid && (loginControl.touched || loginControl.dirty)" style="color: red;">Login is required</mat-hint>
         </mat-form-field>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <button class="buttonreg" type="button">registration</button>
-        <button class="buttonnext" type="button">next</button>
+        <button class="buttonreg" type="button" (click)="goToLogin()">login</button>
+        <button class="buttonnext" type="button" (click)="changeTemplate()">next</button>
       </div>
     </div>
   </div>
 </ng-container>
-
-<ng-template #LoginTemplate>
-  <h3>Hey, I'm login template</h3>
-  <button (click)="changeTemplate()">Change Template</button>
-</ng-template>
 
 <ng-template #PasswordTemplate>
   <div class="container main">
@@ -49,19 +42,17 @@
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <mat-form-field
-          style="width: 260px; margin-bottom: 20px"
-          appearance="outline"
-        >
+        <mat-form-field style="width: 260px; margin-bottom: 20px" appearance="outline">
           <mat-label class="placeholder">Password</mat-label>
-          <input style="width: 260px; height: 20px" matInput type="text" />
+          <input style="width: 260px; height: 20px" matInput type="password" [formControl]="passwordControl" (blur)="selectPassword()"/>
+          <mat-hint *ngIf="passwordControl.invalid && (passwordControl.touched || passwordControl.dirty)" style="color: red;">Password is required</mat-hint>
         </mat-form-field>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <button class="buttonback" type="button">Back</button>
-        <button class="buttonentry" type="button">Entry</button>
+        <button class="buttonback" type="button" (click)="changeTemplate()">Back</button>
+        <button class="buttonentry" type="button" (click)="registration()">Entry</button>
       </div>
     </div>
   </div>
