--- a/ui/src/app/keys/keys.component.html
+++ b/ui/src/app/keys/keys.component.html
@@ -1,28 +1,117 @@
-<div class="container">
-  <mat-form-field>
-      <input type="text" #contextAutoComplete placeholder="context" aria-label="Number" matInput [formControl]="contextControl" [matAutocomplete]="autoContext" (blur)="selectContext()">
-      <button class="btn" type="button" (click)="deleteContext()">delete</button>
-      <mat-autocomplete #autoContext="matAutocomplete">
-        <mat-option *ngFor="let context of contextOptions | async" [value]="context">
-          {{ context }}
-        </mat-option>
-      </mat-autocomplete>
-  </mat-form-field>
-  <mat-form-field>
-      <input type="text" #loginAutoComplete placeholder="login" aria-label="Number" matInput [formControl]="loginControl" [matAutocomplete]="autoLogin" (blur)="selectLogin()">
-       <button class="btn" type="button" ngxClipboard  [cbContent]="login">copy</button>
-       <button class="btn" type="button" (click)="deleteLogin()">delete</button>
-      <mat-autocomplete #autoLogin="matAutocomplete">
-        <mat-option *ngFor="let login of loginOptions | async" [value]="login" >
-          {{ login }}
-        </mat-option>
-      </mat-autocomplete>
-  </mat-form-field>
-  <mat-form-field>
-      <input type="password" placeholder="password" aria-label="Number" matInput [(ngModel)]="password">
-      <button class="btn" type="button" ngxClipboard  [cbContent]="password">copy</button>
-      <button class="btn" type="button" (click)="generate()">generate</button>
-      <button class="btn" type="button" (click)="save()">save</button>
-  </mat-form-field>
-</div>
+<div class="container main">
+  <div class="row d-flex justify-content-center">
+    <div class="col-2 d-flex justify-content-start">
+      <mat-toolbar
+        style="
+          border: 2px solid #737070;
+          background: #f5f5f5;
+          border-radius: 6px;
+        "
+      >
+        <span>KEYS RING</span>
+        <span class="spacer"></span>
+        <button mat-icon-button>
+          <mat-icon>logout</mat-icon>
+        </button>
+      </mat-toolbar>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-1 d-flex justify-content-start">
+      <mat-form-field
+        appearance="outline"
+        style="width: 260px; margin-top: 20px; font-size: 12px"
+      >
+        <mat-label class="placeholder">context/URL</mat-label>
+        <input
+          type="text"
+          #contextAutoComplete
+          aria-label="Number"
+          matInput
+          [formControl]="contextControl"
+          [matAutocomplete]="autoContext"
+          (blur)="selectContext()"
+        />
+        <mat-autocomplete #autoContext="matAutocomplete">
+          <mat-option
+            *ngFor="let context of contextOptions | async"
+            [value]="context"
+          >
+            {{ context }}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </div>
+    <div class="col-1 d-flex justify-content-start">
+      <button class="btnall" type="button">all</button>
+    </div>
+  </div>
 
+  <div class="row d-flex justify-content-center">
+    <div class="col-1 d-flex justify-content-start">
+      <mat-form-field
+        appearance="outline"
+        style="width: 260px; font-size: 12px"
+      >
+        <mat-label class="placeholder">Login</mat-label>
+        <input
+          type="text"
+          #loginAutoComplete
+          aria-label="Number"
+          matInput
+          [formControl]="loginControl"
+          [matAutocomplete]="autoLogin"
+          (blur)="selectLogin()"
+        />
+
+        <mat-autocomplete #autoLogin="matAutocomplete">
+          <mat-option
+            *ngFor="let login of loginOptions | async"
+            [value]="login"
+          >
+            {{ login }}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </div>
+    <div class="col-1 d-flex justify-content-start">
+      <button
+        class="btncopy"
+        type="button"
+        mat-icon-button
+        ngxClipboard
+        [cbContent]="login"
+      >
+        <mat-icon mat-icon-button> content_copy </mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="col-1 d-flex justify-content-start">
+      <mat-form-field
+        appearance="outline"
+        style="width: 260px; font-size: 12px"
+      >
+        <mat-label class="placeholder">Password</mat-label>
+        <input
+          type="password"
+          placeholder="password"
+          aria-label="Number"
+          matInput
+          [(ngModel)]="password"
+        />
+      </mat-form-field>
+    </div>
+    <div class="col-1 d-flex justify-content-start">
+      <button class="btncopy" mat-icon-button (click)="save()">
+        <mat-icon>content_copy</mat-icon>
+      </button>
+    </div>
+    <div class="row d-flex justify-content-center">
+      <div class="col-3 d-flex justify-content-end">
+        <button class="btnadd" type="button">add new</button>
+      </div>
+    </div>
+  </div>
+</div>
