--- a/ui/src/app/keystable/keystable.component.html
+++ b/ui/src/app/keystable/keystable.component.html
@@ -3,7 +3,7 @@
   <input matInput (keyup)="applyFilter($event)" placeholder="Context or Login" #input>
 </mat-form-field>
 
-<table  mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table  mat-table [dataSource]="dataSource" class="mat-elevation-z0">
 
   <!-- Context Column -->
   <ng-container matColumnDef="context">
@@ -26,8 +26,8 @@
   <ng-container matColumnDef="show">
     <th mat-header-cell *matHeaderCellDef> 3 </th>
     <td mat-cell *matCellDef="let element"> 
-      <button mat-icon-button (click)="logout()">
-          <mat-icon>visibility</mat-icon>
+      <button mat-icon-button (click)="show(element)">
+          <mat-icon>check</mat-icon>
       </button>
     </td>
   </ng-container>
@@ -59,4 +59,4 @@
     <td class="mat-cell" colspan="6">No data</td>
   </tr>
 </table>
- <mat-paginator [pageSizeOptions]="[1, 10, 20]" showFirstLastButtons></mat-paginator>
+ <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
