--- a/ui/src/app/keystable/keystable.component.html
+++ b/ui/src/app/keystable/keystable.component.html
@@ -20,14 +20,18 @@
   <!-- Password Column -->
   <ng-container matColumnDef="password">
     <th mat-header-cell *matHeaderCellDef> Password </th>
-    <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+    <td mat-cell *matCellDef="let element"> 
+      <mat-form-field appearance="none">
+        <input matInput disabled type="password"  id="{{element.context + element.login}}"  [value]="element.password">
+      </mat-form-field>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="show">
     <th mat-header-cell *matHeaderCellDef> 3 </th>
     <td mat-cell *matCellDef="let element"> 
       <button mat-icon-button (click)="show(element)">
-          <mat-icon>check</mat-icon>
+          <mat-icon id ="{{element.context + element.login}}">visibility</mat-icon>
       </button>
     </td>
   </ng-container>
@@ -44,7 +48,7 @@
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef> 1 </th>
     <td mat-cell *matCellDef="let element"> 
-      <button mat-icon-button (click)="logout()">
+      <button mat-icon-button (click)="deleteLogin(element)">
           <mat-icon>delete</mat-icon>
       </button>
     </td>
