--- a/ui/src/app/keystable/keystable.component.html
+++ b/ui/src/app/keystable/keystable.component.html
@@ -28,7 +28,7 @@
   </ng-container>
 
   <ng-container matColumnDef="show">
-    <th mat-header-cell *matHeaderCellDef> 3 </th>
+    <th mat-header-cell *matHeaderCellDef>  </th>
     <td mat-cell *matCellDef="let element"> 
       <button mat-icon-button (click)="show(element)">
           <mat-icon id ="{{element.context + element.login}}">visibility</mat-icon>
@@ -37,16 +37,16 @@
   </ng-container>
 
   <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef> 2 </th>
+    <th mat-header-cell *matHeaderCellDef>  </th>
     <td mat-cell *matCellDef="let element"> 
-      <button mat-icon-button (click)="logout()">
+      <button mat-icon-button (click)="goToUpdate(element)">
           <mat-icon>edit</mat-icon>
       </button>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef> 1 </th>
+    <th mat-header-cell *matHeaderCellDef>  </th>
     <td mat-cell *matCellDef="let element"> 
       <button mat-icon-button (click)="deleteLogin(element)">
           <mat-icon>delete</mat-icon>
