--- a/ui/src/app/updatekey/updatekey.component.html
+++ b/ui/src/app/updatekey/updatekey.component.html
@@ -10,7 +10,7 @@
       >
         <span>KEYS RING</span>
         <span class="spacer"></span>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="logout()">
           <mat-icon>logout</mat-icon>
         </button>
       </mat-toolbar>
