--- a/ui/src/app/keystable/keystable.component.css
+++ b/ui/src/app/keystable/keystable.component.css
@@ -1,8 +1,115 @@
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@500&family=Noto+Sans&family=Roboto:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@500&family=Roboto:wght@900&display=swap");
 table {
+  width: 90%;
+  margin-left: 5%;
+}
+mat-paginator {
+  width: 90%;
+  margin-left: 5%;
+}
+.buttons {
+  width: 90%;
+  margin-left: 5%;
+}
+.logo {
+  width: 90%;
+  margin-left: 5%;
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: 700;
+}
+.logout {
+  width: 90%;
+  margin-left: 5%;
+}
+.mat-form-field {
   width: 100%;
 }
+.header {
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+.password {
+  justify-content: center;
+  text-align: center;
+}
 
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
+.search {
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background: #ffffff;
+  border: 2px solid #9b8585;
+  box-sizing: border-box;
+  border-radius: 50px;
+  align-items: center;
+  font-weight: 400;
+
+  line-height: 0;
+  padding: 0;
+}
+.mat-form-field-wrapper {
+  padding: 0em !important;
+}
+
+.accounts {
+  font-family: Heebo;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 32px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.btnadd {
+  width: 100px;
+  height: 32px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 14px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  justify-content: center;
+  color: rgba(47, 47, 47, 0.77);
+  background: #ffffff;
+  border: 2px solid rgba(47, 47, 47, 0.77);
+  box-sizing: border-box;
+  border-radius: 6px;
+  margin-top: 40px;
+  margin-right: 30px;
+}
+.btnback {
+  width: 100px;
+  height: 32px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 14px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  justify-content: center;
+  color: rgba(47, 47, 47, 0.77);
+  background: #ffffff;
+  border: 2px solid rgba(47, 47, 47, 0.77);
+  box-sizing: border-box;
+  border-radius: 6px;
+  margin-top: 40px;
 }
