--- a/ui/src/app/addkey/addkey.component.html
+++ b/ui/src/app/addkey/addkey.component.html
@@ -8,7 +8,7 @@
           border-radius: 6px;
         "
       >
-        <span>KEYS RING</span>
+        <span style="font-weight: 500"> KEYS RING</span>
         <span class="spacer"></span>
         <button mat-icon-button (click)="logout()">
           <mat-icon>logout</mat-icon>
@@ -22,7 +22,7 @@
         appearance="outline"
         style="width: 260px; margin-top: 20px; font-size: 12px"
       >
-        <mat-label class="placeholder">context/URL</mat-label>
+        <mat-label class="placeholder">Context/URL</mat-label>
         <input
           type="text"
           #contextAutoComplete
