--- a/ui/src/app/login/login.component.html
+++ b/ui/src/app/login/login.component.html
@@ -12,17 +12,37 @@
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <mat-form-field style="width: 260px; margin-bottom: 20px" appearance="outline">
+        <mat-form-field
+          style="width: 260px; margin-bottom: 20px"
+          appearance="outline"
+        >
           <mat-label class="placeholder">Login</mat-label>
-          <input style="width: 260px; height: 20px" matInput type="text" [formControl]="loginControl" (blur)="selectLogin()"/>
-          <mat-hint *ngIf="loginControl.invalid && (loginControl.touched || loginControl.dirty)" style="color: red;">Login is required</mat-hint>
+          <input
+            style="width: 260px; height: 20px"
+            matInput
+            type="text"
+            [formControl]="loginControl"
+            (blur)="selectLogin()"
+          />
+          <mat-hint
+            *ngIf="
+              loginControl.invalid &&
+              (loginControl.touched || loginControl.dirty)
+            "
+            style="color: red"
+            >Login is required</mat-hint
+          >
         </mat-form-field>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <button class="buttonreg" type="button" (click)="goToRegistration()">registration</button>
-        <button class="buttonnext" type="button" (click)="changeTemplate()">next</button>
+        <button class="buttonreg" type="button" (click)="goToRegistration()">
+          registration
+        </button>
+        <button class="buttonnext" type="button" (click)="changeTemplate()">
+          next
+        </button>
       </div>
     </div>
   </div>
@@ -42,17 +62,38 @@
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <mat-form-field style="width: 260px; margin-bottom: 20px" appearance="outline">
+        <mat-form-field
+          style="width: 260px; margin-bottom: 20px"
+          appearance="outline"
+        >
           <mat-label class="placeholder">Password</mat-label>
-          <input style="width: 260px; height: 20px" matInput type="password" [formControl]="passwordControl" (blur)="selectPassword()"/>
-          <mat-hint *ngIf="passwordControl.invalid && (passwordControl.touched || passwordControl.dirty)" style="color: red;">Password is required</mat-hint>
+          <input
+            style="width: 260px; height: 20px"
+            matInput
+            type="password"
+            [formControl]="passwordControl"
+            (blur)="selectPassword()"
+          />
+          <mat-hint
+            *ngIf="
+              passwordControl.invalid &&
+              (passwordControl.touched || passwordControl.dirty)
+            "
+            style="color: red"
+            >Password is required</mat-hint
+          >
         </mat-form-field>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-2 d-flex justify-content-start">
-        <button class="buttonback" type="button" (click)="changeTemplate()">Back</button>
-        <button class="buttonentry" type="button" (click)="Login()">Entry</button>
+        <button class="buttonback" type="button" (click)="changeTemplate()">
+          Back
+        </button>
+
+        <button class="buttonentry" type="button" (click)="Login()">
+          Entry
+        </button>
       </div>
     </div>
   </div>
