--- a/ui/src/app/keystable/keystable.component.html
+++ b/ui/src/app/keystable/keystable.component.html
@@ -35,7 +35,7 @@
     </label>
   </mat-form-field>
 </div>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
+<table id="table" mat-table [dataSource]="dataSource" class="mat-elevation-z0">
   <!-- Context Column -->
   <ng-container matColumnDef="context">
     <th
