--- a/ui/src/app/keystable/keystable.component.html
+++ b/ui/src/app/keystable/keystable.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar style="background: #f5f5f5">
       <span class="logo">KEYS RING</span>
       <span class="logout"></span>
-      <button mat-icon-button>
+      <button mat-icon-button (click)="logout()">
         <mat-icon>logout</mat-icon>
       </button>
     </mat-toolbar>
@@ -96,8 +96,7 @@
       style="width: 10% !important; font-size: 16px"
       mat-header-cell
       *matHeaderCellDef
-    >
-      3
+    >   
     </th>
     <td style="width: 10% !important" mat-cell *matCellDef="let element">
       <button
@@ -111,29 +110,25 @@
       </button>
     </td>
   </ng-container>
-
   <ng-container matColumnDef="edit">
     <th
       style="width: 10% !important; font-size: 16px"
       mat-header-cell
       *matHeaderCellDef
-    >
-      2
+    >  
     </th>
     <td style="width: 10% !important" mat-cell *matCellDef="let element">
-      <button mat-icon-button (click)="logout()" style="margin-left: -15px">
+      <button mat-icon-button (click)="goToUpdate(element)" style="margin-left: -15px">
         <mat-icon>edit</mat-icon>
       </button>
     </td>
   </ng-container>
-
   <ng-container matColumnDef="delete">
     <th
       style="width: 10% !important; font-size: 16px"
       mat-header-cell
       *matHeaderCellDef
-    >
-      1
+    >    
     </th>
     <td style="width: 10% !important" mat-cell *matCellDef="let element">
       <button
@@ -145,26 +140,22 @@
       </button>
     </td>
   </ng-container>
-
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
   <!-- Row shown when there is no matching data. -->
   <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" colspan="6">No data</td>
   </tr>
 </table>
-
 <mat-paginator
   [pageSizeOptions]="[5, 10, 20]"
   showFirstLastButtons
 ></mat-paginator>
-
 <div class="row d-flex justify-content-center buttons">
   <div class="col-11 d-flex justify-content-end">
-    <button class="btnadd" type="button">add</button>
+    <button class="btnadd" type="button" (click)="goToAddkey()">add</button>
   </div>
   <div class="col-1 d-flex justify-content-start">
-    <button class="btnback" type="button">back</button>
+    <button class="btnback" type="button" (click)="goBack()">back</button>
   </div>
 </div>
